resources/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: %ENVIRONMENT%-%NAMESPACE%-ingress
  namespace: %NAMESPACE%
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: %ENVIRONMENT%-%APP_NAME%-svc
          servicePort: 80
        path: /%APP_NAME%(/|$)(.*)
  - host: frontend.172.16.51.51.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: %ENVIRONMENT%-%APP_NAME%-svc
          servicePort: 80
        path: /%APP_NAME%
